docs: skill 문서 진입 경로와 예시 정리
- 모든 SKILL frontmatter 설명을 intent-based 'Use this skill when' 형식으로 통일합니다.
- Spring/JDK skill의 common-case 예시와 reference 경계를 보강해 self-sufficiency와 progressive disclosure 규칙을 맞춥니다.